chore(*): Completed all endpoints
