# controllers/films/index.ts
@@ -1,35 +1,65 @@
-import axios from 'axios';
 import { Request, Response, NextFunction } from 'express';
 import sendSuccess from '../../responses/success';
-// import { Comment, CommentI } from '../../models/comments';
-import CustomError from '../../responses/error/custom-error';
-import httpCodes from '../../constants/http-status-codes';
-import responseCodes from '../../constants/response-codes';
-import responseMessage from '../../constants/response-messages';
-import { makeRequest, swapiResource } from 'lib/swapi';
+import {
+    getFilmsRequest,
+    sortedItems,
+    Order,
+    SortFilmsOptions,
+    OtherFilmsProperties
+} from '../../lib/swapi';
+import CommentModel from '../../models/comments';
 
-class CharacterController {
+class FilmsController {
     public constructor() { }
 
-    public async getCharacter(req: Request, res: Response, next: NextFunction): Promise<void> {
+    public async getFilms(req: Request, res: Response, next: NextFunction): Promise<void> {
         try {
-            const { id, title, crawl, producer, release_date: releaseDate } = req.query;
+            const { query, order, ...rest } = req.query;
+            let { sort } = req.query;
 
-            if (id) {
-                const { data } = await makeRequest(swapiResource.people);
-                console.log('data', data);
+            let { data: { results: films } } = await getFilmsRequest();
+
+            // filter keys
+            const filters = Object.keys(rest);
+
+            // search keys
+            const searchs = Object.values({ ...SortFilmsOptions, ...OtherFilmsProperties });
+
+            // Apply Filters to films
+            films = films.filter((film): boolean =>
+                filters.every((filter): boolean => rest[filter] === film[filter]));
+
+            // Apply Search for films
+            if (query) {
+                films = films.filter((film): boolean =>
+                    searchs.some((search): boolean => film[search].toLowerCase()
+                        .includes(String(query).toLowerCase())));
             }
 
+            // Sort films
+            films = sortedItems(films, sort = SortFilmsOptions.releaseDate, order as Order);
 
-            // let result = article ? await Comment.find({ article, author: user.id })
-            //     : await Comment.find({ author: user.id });
+            const filmsWithComments = [];
 
-            // sendSuccess(res, 'controller:comment', result);
+            for (const film of films) {
+                const id = film.url.split('/').filter((item): boolean => !isNaN(parseInt(item)))[0];
+                const commentsCount = await CommentModel.query().where({ filmId: id }).count();
 
+                filmsWithComments.push({ ...film, ...commentsCount[0] });
+            }
+
+            const response = {
+                films: filmsWithComments,
+                metadata: {
+                    totalfilms: films.length
+                }
+            };
+
+            sendSuccess(res, 'controller:films', response);
         } catch (e) {
             next(e);
         }
     }
 }
 
-export default new CharacterController();
+export default new FilmsController();
